--- a/websiteOne/src/output.css
+++ b/websiteOne/src/output.css
@@ -696,6 +696,10 @@ video {
   text-align: center;
 }
 
+.font-poppins {
+  font-family: Poppins, sans-serif;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
